pkg/lang/syntax/testdata/ub/lower/invalid/preclassified-project.ub
requires: {
  'github.com/cloudboss/example': 'v1.2.3'
}
